--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "Feedback collector application",
   "main": "index.js",
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "franco.fral",
   "license": "ISC",
