--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "author": "franco.fral",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.16.2"
+        "express": "^4.16.2",
+        "passport": "^0.4.1",
+        "passport-google-oauth20": "^2.0.0"
     }
 }
