--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,14 @@
         "npm": "6.4.1"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "author": "franco.fral",
     "license": "ISC",
     "dependencies": {
         "express": "^4.16.2",
+        "nodemon": "^2.0.2",
         "passport": "^0.4.1",
         "passport-google-oauth20": "^2.0.0"
     }
