--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.16.2",
+        "mongoose": "^5.9.6",
         "nodemon": "^2.0.2",
         "passport": "^0.4.1",
         "passport-google-oauth20": "^2.0.0"
