--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "author": "franco.fral",
     "license": "ISC",
     "dependencies": {
+        "cookie-session": "^1.4.0",
         "express": "^4.16.2",
         "mongoose": "^5.9.6",
         "nodemon": "^2.0.2",
