--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,14 @@
     },
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "server": "nodemon index.js",
+        "client": "npm run start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "author": "franco.fral",
     "license": "ISC",
     "dependencies": {
+        "concurrently": "^5.1.0",
         "cookie-session": "^1.4.0",
         "express": "^4.16.2",
         "mongoose": "^5.9.6",
