--- a/server/client/package.json
+++ b/server/client/package.json
@@ -2,15 +2,11 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
-    "proxy": {
-        "/auth/google": {
-            "target": "http://localhost:5000"
-        }
-    },
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "http-proxy-middleware": "^1.0.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
