--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "Feedback collector application",
-    "main": "index.js",
-    "engines": {
-        "node": "12.18.0",
-        "npm": "6.14.4"
-    },
-    "scripts": {
-        "start": "node index.js",
-        "server": "nodemon index.js",
-        "client": "npm run start --prefix client",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
-    },
-    "author": "franco.fral",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^1.19.0",
-        "concurrently": "^5.1.0",
-        "cookie-session": "^1.4.0",
-        "express": "^4.16.2",
-        "mongoose": "^5.9.6",
-        "nodemon": "^2.0.2",
-        "passport": "^0.4.1",
-        "passport-google-oauth20": "^2.0.0",
-        "stripe": "^8.75.0"
-    }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Feedback collector application",
+  "main": "index.js",
+  "engines": {
+    "node": "12.18.0",
+    "npm": "6.14.4"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+  },
+  "author": "franco.fral",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
+    "cookie-session": "^1.4.0",
+    "express": "^4.16.2",
+    "mongoose": "^5.9.6",
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^8.75.0"
+  }
 }
